# trade-termimal

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  cli_client.c  cli_server.c  conf.json  main.c  parcer.c  parcer.h  parser.c  parser.h  test.c
client/: CMakeLists.txt  client.c  client.h  main.c
client/libs/client/: CMakeLists.txt  client.h  main.c
client/server/: server
libs/: CMakeLists.txt
libs/cJSON/: CMakeLists.txt
libs/cli/: CMakeLists.txt  cli.c  cli.h  test_cli.c
libs/list/: CMakeLists.txt  list.c  list.h  test  test_list.c
libs/net/: CMakeLists.txt  net.c  net.h  test  test.c  test_clapp.c  test_servapp.c
libs/parser/: CMakeLists.txt  pars_setup_test.c  parser  parser.c  parser.h  test.c
libs/parser/test/: CMakeLists.txt  test  test.c
libs/server/: CMakeLists.txt  server.c  server.h
server/: CMakeLists.txt  list.c  list.h  main.c  server.c  server.h  sig_hand.c  sig_handler.c  test  test_list.c
